tests/NormalTests/paczka1/fuzzy1/83676149.err
Error in line 9: A3 S163 13,3
Error in line 8: jJD A35 64,2
Error in line 14: A3 S163 64,9
Error in line 1: JQ5w A3 83,7
Error in line 17: A3 A35 87,7
Error in line 16: JQ5w S163 27,2
Error in line 22: JQ5w A3 97,5
Error in line 19: YqJahIr02aB A3 64,2
Error in line 23: jJD A3 97,9
Error in line 35: A3 S305 13,6
Error in line 37: A3 S305 48,4
Error in line 40: Vc2V6h A3 -2,1
